adding mongoosastic
