# api/swagger/swagger.yaml
@@ -7912,3 +7912,55 @@ paths:
           description: "Access Denied"
           schema:
             $ref: "#/definitions/Error"
+
+
+
+
+
+
+  /Elasticsearch:
+    x-swagger-router-controller: elasticSearch
+    options:
+      tags:
+        - test
+      summary: "test"
+      operationId: options
+      description: "Options on Project GET Route"
+      responses:
+        "200":
+          description: "Success"
+        "403":
+          description: "Access Denied"
+    head:
+      tags:
+        - project
+      summary: "Retrieve META associated with an project."
+      operationId: head
+      description: "Get META from the request, without returning the payload in question."
+      responses:
+        "200":
+          description: "Success"
+        "403":
+          description: "Access Denied"
+    post:
+      tags:
+        - Elasticsearch
+      summary: "Sync elastic search"
+      operationId: syncElasticSearch
+      description: "Sync mognodb and elastic search (this is a test)"
+      responses:
+        "200":
+          description: "Success"
+        "403":
+          description: "Access Denied"
+    get:
+      tags:
+        - Elasticsearch
+      summary: "Sync elastic search"
+      operationId: search
+      description: "Sync mognodb and elastic search (this is a test)"
+      responses:
+        "200":
+          description: "Success"
+        "403":
+          description: "Access Denied"
